--- a/app.json
+++ b/app.json
@@ -7,10 +7,10 @@
   "env": {
     "UUID": {
       "description": "VLESS UUID",
-      "value": "3a53a3e5-da83-48d2-aee9-d88a498eb3dd"
+      "value": "1d740770-5124-4187-88d9-93970b9dad05"
     }
   },
-  "website": "https://github.com/GeekNAUer/",
-  "repository": "https://github.com/GeekNAUer/vlessheroku",
+  "website": "https://github.com/n0thing2speak",
+  "repository": "https://github.com/n0thing2speak/vlessheroku",
   "stack": "container"
 }
